# AI-Foundation

./: .gitignore  .mcp.json  AUDIT.md  AUTOSTART.md  BENCHMARK_FINDINGS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  COMPLETE_OPTIMIZATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FEEDBACK_AI_FOUNDATION.md  GEMINI.md  IDENTITY_SECURITY.md  INTEGRATIONS.md  LICENSE  QUICKSTART.md  README.md  SPEED_OPTIMIZATION_PLAN.md  Start Cove Connector.bat  TEAMENGRAM-FEATURE-PARITY.md  TOKEN_HOTSPOTS_REPORT.md  V1.0.0_RELEASE_READY.md  __init__.py  ai_identity.txt  ai_identity.txt.template  aliases.sh  deploy-tools.ps1  install.ps1  install.py  install.sh  mcp_shared.py  postgres_setup_server.py  postgres_setup_server.py.backup  redis_events.py  redis_pool.py  release-notes.md  run-tests.sh  sign.py  task_manager.py  (+19 more)
.claude/: mcp-launcher.py  settings.json
.github/: FUNDING.yml
Installers/: forge_installer.py
_reference_awareness_features/: README.md  awareness_core.py  awareness_listener.py  awareness_state.py  presence_heartbeat.py  presence_injector.py  presence_injector_realtime.py  presence_injector_streams.py  teambook_awareness_helpers.py  temporal_awareness.py
ai-foundation-portable/: status.bat
bridge/: desktop_bridge.py
config/: mcp-template.json
crates/engram/: Cargo.toml  DESIGN.md  KNOWLEDGE-GRAPH-2.0-DESIGN.md
crates/engram/src/: bloom.rs  crypto.rs  embedding.rs  error.rs  header.rs  hnsw.rs  lib.rs  note.rs  recall.rs  storage.rs  vault.rs  vector.rs
crates/engram/src/graph/: csr.rs  entity.rs  health.rs  inference.rs  legacy.rs  mod.rs  query.rs  types.rs
crates/federation/: Cargo.toml
crates/federation/src/: consent.rs  gateway.rs  hlc.rs  identity.rs  inbox.rs  lib.rs  messages.rs  node.rs  registry.rs  session.rs  sync.rs  transport.rs
crates/federation/src/discovery/: mod.rs
crates/forge/: Cargo.toml
crates/forge/src/: main.rs
crates/forge/src/hooks/: mod.rs
crates/forge/src/llm/: local.rs  mod.rs  openai.rs  provider.rs  types.rs
crates/forge/src/tools/: mod.rs
crates/forge/src/ui/: app.rs  colors.rs  mod.rs  widgets.rs
crates/notebook-rs/: Cargo.toml  test.py  test_integration.py  test_postgresql_integration.py  test_schema.db  test_sequence.db
crates/notebook-rs/.ai-foundation/: notebook.db
crates/notebook-rs/TempRustWheels/: notebook_rs-0.1.0-cp38-abi3-win_amd64.whl
crates/shm-rs/: Cargo.toml
crates/shm-rs/src/: bulletin.rs  context.rs  enrichment.rs  lib.rs  mailbox.rs  region.rs  ring_buffer.rs  zerocopy.rs
crates/teamengram-rs/: Cargo.toml  Cargo.toml.tmp
crates/teamengram-rs/src/: client.rs  compat_types.rs  crypto.rs  event.rs  event_log.rs  ipc.rs  lib.rs  mcp_adapter.rs  migration.rs  outbox.rs  page.rs  sequencer.rs  store.rs  store.rs.backup  v2_client.rs  view.rs  wake.rs
docs/: FEDERATION-DESIGN.md  (+36 more)
mobile-api/: Cargo.toml
mobile-api/src/: auth.rs  cli.rs  handlers.rs  main.rs  pairing.rs  parser.rs
tools/afide/: Cargo.toml
tools/afide/src/: config.rs  deploy.rs  display.rs  drift.rs  health.rs  main.rs  registry.rs
tools/afp-rs/: Cargo.toml
tools/afp-rs/src/: client.rs  error.rs  fingerprint.rs  identity.rs  keys.rs  lib.rs  message.rs  server.rs  tpm.rs
tools/afp-rs/src/transport/: mod.rs  quic.rs  websocket.rs
tools/ai-foundation-a2a/: Cargo.toml
tools/ai-foundation-a2a/src/: agent_card.rs  cli.rs  dispatch.rs  main.rs  rpc.rs  streaming.rs  task.rs
tools/ai-foundation-a2a/src/skills/: mod.rs  notebook.rs  teambook.rs
tools/ai-foundation-tests/: Cargo.toml  run-all-tests.bat
tools/ai-foundation-tests/.config/: nextest.toml
tools/ai-foundation-tests/src/: lib.rs
tools/code-graph-rs/: Cargo.toml
tools/codegraph-rs/: Cargo.toml
tools/codegraph-rs/src/: compare.rs  graph.rs  lib.rs  parser.rs
tools/codegraph-rs/src/parsers/: compose.rs  kotlin_routes.rs  mod.rs  sveltekit.rs
tools/cyberspace/: Cargo.toml
tools/cyberspace/assets/shaders/: wet_concrete.wgsl
tools/cyberspace/src/: main.rs
tools/engram-mcp/: Cargo.toml  README.md
tools/engram-mcp/src/: main.rs  session_start.rs
tools/federation-rs/: Cargo.toml
tools/federation-rs/src/: adapter.rs  cache.rs  connection.rs  endpoint.rs  gateway.rs  identity.rs  inbox.rs  lib.rs  manifest.rs  messages.rs  node.rs  pairing.rs  registry.rs  replication.rs  sharing.rs  stun.rs
tools/federation-rs/src/discovery/: bluetooth.rs  mdns.rs  mod.rs  passkey.rs
tools/federation-server/: Cargo.toml
tools/federation-server/src/: main.rs
tools/firebase-rs/: Cargo.toml  test_auth.rs
tools/firebase-rs/src/: auth.rs  client.rs  crashlytics.rs  error.rs  firestore.rs  lib.rs  play_vitals.rs
tools/forge/: Cargo.toml
tools/forge/patches/llama-cpp-sys-2/: Cargo.toml  README.md  build.rs
tools/forge/src/: main.rs
tools/forge/src/config/: mod.rs
tools/forge/src/hooks/: mod.rs
tools/forge/src/llm/: anthropic.rs  local.rs  openai.rs  provider.rs  types.rs
tools/forge/src/tools/: mod.rs
tools/forge/src/ui/: app.rs  colors.rs  mod.rs  widgets.rs
tools/format-rs/: Cargo.toml
tools/format-rs/src/: lib.rs
tools/graph-rs/: Cargo.toml
tools/graph-rs/src/: lib.rs
tools/mcp-http-gateway/: Cargo.toml
tools/mcp-http-gateway/src/: main.rs
tools/mcp-server-rs/: Cargo.toml  Cargo.toml.new  add_critical_tools.py  add_final_tools.py  add_missing_critical_tools.py  add_missing_tools.py  add_real_tools.py  add_remaining_tools.py  add_teambook_tools.py  add_tools.py  fix_formatting.py
tools/mcp-server-rs/.cargo/: config.toml
tools/mcp-server-rs/src/: cli_wrapper.rs  gen_main.py  http_server.rs  identity_verify.rs  main.rs  main.rs.expand  main_minimal.rs  notebook_compat.rs  oauth.rs  state.rs  test_write.rs  write_main.py
tools/net-diver-rs/: Cargo.toml  config.toml
tools/net-diver-rs/src/: main.rs
tools/profile-rs/: Cargo.toml  profile.schema.toml
tools/profile-rs/src/: main.rs
tools/shared-rs/: Cargo.toml
tools/shared-rs/src/: lib.rs
tools/stun-server/: Cargo.toml
tools/stun-server/src/: main.rs  stun_handler.rs
tools/sync-rs/: Cargo.toml
tools/task-rs/: Cargo.toml
tools/task-rs/src/: lib.rs  store.rs
(+358 files in other folders)
