[package]
name = "ai-foundation-mcp"
version = "1.0.0"
edition = "2021"
description = "Multi-AI coordination framework - MCP server"
license = "MIT"
repository = "https://github.com/QD25565/ai-foundation"

[lib]
name = "ai_foundation_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }

# HTTP server (used by ai-foundation-http binary)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "ai-foundation-mcp"
path = "src/main.rs"

[[bin]]
name = "ai-foundation-http"
path = "src/http_main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
