[package]
name = "ai-foundation-mcp"
version = "1.0.0"
edition = "2021"
description = "Multi-AI coordination framework - MCP server"
license = "MIT"
repository = "https://github.com/QD25565/ai-foundation"

[lib]
name = "ai_foundation_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }

# HTTP server (used by ai-foundation-http binary)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Federation cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hostname = "0.4"

[[bin]]
name = "ai-foundation-mcp"
path = "src/main.rs"

[[bin]]
name = "ai-foundation-http"
path = "src/http_main.rs"

# Module gating is runtime via AI_FOUNDATION_MODULES env var (not Cargo features).
# rmcp's #[tool_router] proc macro doesn't support #[cfg] on individual tools,
# so we use ToolRouter::remove_route() at startup to disable opt-in modules.
# See main.rs doc comment for configuration details.

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
