[workspace]
members = [
    ".",
    "crates/engram",
    "crates/teamengram-rs",
    "crates/notebook-rs",
    "crates/shm-rs",
    "crates/forge",
    "crates/federation",
    "mobile-api",
]
resolver = "2"

# Patched llama-cpp-sys-2 for Windows GNU target compatibility.
# In-workspace path; individual crate [patch] sections are ignored in workspaces.
[patch.crates-io]
llama-cpp-sys-2 = { path = "crates/llama-cpp-sys-2" }

[package]
name = "ai-foundation-mcp"
version = "1.0.0"
edition = "2021"
description = "Multi-AI coordination framework - MCP server"
license = "MIT"
repository = "https://github.com/QD25565/ai-foundation"

[lib]
name = "ai_foundation_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }

# HTTP server (used by ai-foundation-http binary)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Federation protocol — P2P core (QUIC, mDNS, cursor-tracked replication, 161 tests)
# Named federation_core to avoid conflict with src/federation.rs (HTTP-layer module)
federation_core = { package = "federation", path = "crates/federation" }

# Federation cryptography (still used by HTTP-layer federation modules)
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hostname = "0.4"

# In-process dispatch: call teamengram directly instead of subprocess spawning.
# Eliminates 15-50ms per tool call (process creation overhead on Windows).
# Enable with: cargo build --features in-process
teamengram = { path = "crates/teamengram-rs", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = []
# Link teamengram crate directly into MCP server for zero-subprocess teambook calls.
# Notebook operations stay as subprocess (engram depends on llama-cpp, too heavy).
in-process = ["dep:teamengram", "dep:chrono"]

[[bin]]
name = "ai-foundation-mcp"
path = "src/main.rs"

[[bin]]
name = "ai-foundation-http"
path = "src/http_main.rs"

# Module gating is runtime via AI_FOUNDATION_MODULES env var (not Cargo features).
# rmcp's #[tool_router] proc macro doesn't support #[cfg] on individual tools,
# so we use ToolRouter::remove_route() at startup to disable opt-in modules.
# See main.rs doc comment for configuration details.

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Speed-critical crates override opt-level to 3 (inference, shared-memory, LLM).
# lto/codegen-units/strip/panic are workspace-wide and cannot be per-package.
[profile.release.package.notebook-rs]
opt-level = 3

[profile.release.package.shm-rs]
opt-level = 3

[profile.release.package.forge]
opt-level = 3

[profile.release.package.engram]
opt-level = 3

[profile.release.package.teamengram]
opt-level = 3

# Bench profile: thin LTO for accurate benchmark results.
[profile.bench]
opt-level = 3
lto = "thin"
