[package]
name = "ai-foundation-mobile-api"
version = "1.0.0"
edition = "2021"
description = "AI-Foundation HTTP API server for mobile clients"
license = "MIT"

[[bin]]
name = "ai-foundation-mobile-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rand = "0.8"
