[package]
name = "engram"
version = "0.1.0"
edition = "2021"
description = "Purpose-built AI memory database. The physical substrate for AI memory."
license = "MIT"
repository = "https://github.com/QD25565/ai-foundation"
keywords = ["ai", "memory", "database", "vector", "graph"]
categories = ["database", "data-structures"]

[lib]
name = "engram"
path = "src/lib.rs"

[[bin]]
name = "engram-cli"
path = "src/bin/engram-cli.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
# Memory-mapped files - zero-copy reads
memmap2 = "0.9"

# Compression - zstd for note content
zstd = "0.13"

# Encryption - XChaCha20-Poly1305 for vault
chacha20poly1305 = "0.10"

# Hashing - for content deduplication, bloom filters
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
crc32fast = "1.4"

# SIMD operations - for vector math
# (We'll use std::simd when stable, manual for now)

# Serialization - for metadata only
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random - for HNSW level generation
rand = "0.8"

# Time
chrono = "0.4"

# Directory paths
dirs = "5"

# Regex for entity extraction
regex = "1.10"

# Migration tool dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"

# Local LLM inference for embeddings - REQUIRED, not optional
# Embeddings are foundational to exceptional recall (keyword + semantic + graph)
llama-cpp-2 = "=0.1.127"

# llama-cpp-sys-2 patch is defined at the workspace root Cargo.toml

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3.10"

