[package]
name = "afide"
version = "0.1.0"
edition = "2021"
description = "AI-Foundation IDE - Developer environment for managing AI agent instances"
authors = ["AI-Foundation Team"]

[[bin]]
name = "afide"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
walkdir = "2.4"
dirs = "5.0"
anyhow = "1.0"
tabled = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
