[package]
name = "afp-rs"
version = "0.1.0"
edition = "2021"
description = "AI-Foundation Protocol - Global AI Interconnect"
authors = ["AI-Foundation"]
license = "MIT"

[lib]
name = "afp"
path = "src/lib.rs"

[[bin]]
name = "afp-server"
path = "src/bin/afp-server.rs"

[[bin]]
name = "afp-cli"
path = "src/bin/afp-cli.rs"

[dependencies]
# Serialization - CBOR (RFC 8949)
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }

# Cryptography - Ed25519
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Transport - QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"  # For generating self-signed certs

# Transport - WebSocket fallback
tokio-tungstenite = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Key storage
keyring = "3"  # Cross-platform keychain

# Hardware fingerprint
sysinfo = "0.32"
raw-cpuid = "11"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

# Optional: TPM support (Windows/Linux)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[features]
default = []
tpm = []  # Enable TPM support (requires tss-esapi, complex build)
