[package]
name = "code-graph-rs"
version = "0.1.0"
edition = "2021"
description = "Multi-language code graph analysis using tree-sitter"

[[bin]]
name = "code-graph"
path = "src/bin/code-graph.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Tree-sitter core
tree-sitter = "0.24"

# Language grammars (top 10 languages)
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# File walking
walkdir = "2"
ignore = "0.4"

# Parallel processing
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
