[package]
name = "deep-net"
version = "0.1.0"
edition = "2021"
description = "Deep Net - Spatial interface to AI-Foundation Teambooks"
authors = ["AI-Foundation Team"]

[features]
default = []
# VR support for Quest 3
vr = ["bevy_oxr"]

[dependencies]
# Bevy 0.18 - use defaults (includes everything we need)
bevy = "0.18"

# Procedural noise for shaders
noisy_bevy = "0.13"

# For shader uniform structs
bytemuck = { version = "1.14", features = ["derive"] }

# VR - optional for Quest builds (0.3 is latest, supports Bevy 0.17)
# Will need update when bevy_oxr supports 0.18
bevy_oxr = { version = "0.3", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[[bin]]
name = "deep-net"
path = "src/main.rs"
