[package]
name = "firebase-rs"
version = "0.1.0"
edition = "2021"
description = "Firebase CLI for AI-Foundation - Crashlytics, Firestore, Auth, Remote Config"
authors = ["AI-Foundation Team"]

[[bin]]
name = "firebase-cli"
path = "src/bin/firebase-cli.rs"

[lib]
name = "firebase_rs"
path = "src/lib.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Firebase REST APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# JWT for service account auth
jsonwebtoken = "9.3"

# Base64 for encoding
base64 = "0.22"

# Environment and config
dotenvy = "0.15"

# Colored output
colored = "2.1"

# URL handling
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
