[package]
name = "deep-net"
version = "0.1.0"
edition = "2021"
description = "Deep Net - 3D Cyberspace for AI-Foundation"

[dependencies]
# 3D Graphics - lightweight, immediate mode
macroquad = "0.4"

# Async HTTP for nexus-server connection
reqwest = { version = "0.11", features = ["json", "blocking"] }

# System information (RAM, CPU, disk)
sysinfo = "0.30"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math (macroquad uses glam internally)
glam = "0.24"

# Noise for glitch effects
noise = "0.8"

# Config hot-reload
toml = "0.8"
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
