[package]
name = "profile-cli"
version = "0.1.0"
edition = "2021"
description = "AI-Foundation Profile Manager - Identity, avatars, and evolution tracking for AIs"
license = "MIT"

[[bin]]
name = "profile-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# TOML parsing
toml = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File paths
dirs = "5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Pretty printing
colored = "2.1"

# Image handling (for avatar management)
image = "0.25"

# HTTP client (for image generation APIs)
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

# JSON (for API responses)
serde_json = "1.0"

[features]
default = []
image-gen = ["reqwest"]

[profile.release]
opt-level = 3
lto = "thin"
