[package]
name = "shared-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_foundation_shared"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "identity-cli"
path = "src/bin/identity-cli.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
ed25519-dalek = "2.1"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
