[package]
name = "task-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance local task manager for AI agents"
autobins = false  # Don't auto-discover broken files in src/bin/

[[bin]]
name = "task-cli"
path = "src/bin/task-cli.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# SQLite for local storage (legacy, kept for migration)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Engram-style storage
memmap2 = "0.9"          # Memory-mapped I/O
crc32fast = "1.3"        # Checksum for integrity

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
